# database_acess

./: .gitignore  Cargo.toml  Dockerfile  myschema.sql
Resources/: Cypher.txt
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/neo4j/: repository.rs
backend/src/models/: person.rs
frontend/: Cargo.toml  index.html
frontend/src/: index.html  main.rs  models.rs
frontend/styles/css/: style.css
src/: main.rs
src/api/: api.rs
src/frontend/: index.html
